<resources>
    <string name="app_name" translatable="false">Abra</string>
    <string name="find_courier">Find Courier</string>
    <string name="your_orders">Your Orders</string>
    <string name="offer_to_carry">Offer to Carry</string>
    <string name="inbox">Inbox</string>
    <string name="my_profile">My Profile</string>
    <string name="start_typing">start typing %1$s point</string>
    <string name="continue_text">Continue</string>
    <string name="select_valid_argument">Please select valid %1$s</string>
    <string name="capacity_selection_explanation">How many kg can your luggage can carry?</string>
    <string name="price_selection_explanation">How much money do you want for carrying?</string>
    <string name="instant_booking_explanation">Save time and let your passengers book instantly</string>
    <string name="instant_booking_explanation_2">If not, you\'ll have to reply every booking requests yourself</string>
    <string name="continue_without_instant_booking">Continue without instant booking</string>
    <string name="post">Post</string>
    <string name="origin_destination_explanation_text">Start typing your %1$s location</string>
    <string name="origin">origin</string>
    <string name="destination">destination</string>
    <string name="departure">departure</string>
    <string name="arrival">arrival</string>
    <string name="initial">initial</string>
    <string name="please_select_origin_destination">Please enter valid %1$s point.</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="capacity">capacity</string>
    <string name="search">Search</string>
    <string name="explanation_time_date">Please select your %1$s %2$s.</string>
    <string name="explanation_time_origin">Please select your departure time.</string>
    <string name="explanation_time_destination">Please select your arrival time.</string>
    <string name="explanation_time_search">Please select your initial time.</string>
    <string name="explanation_date_origin">Please select your departure date.</string>
    <string name="explanation_date_destination">Please select your arrival date.</string>
    <string name="explanation_date_search">Please select your initial date.</string>
    <string name="explanation_add_note">Do you want to add note?</string>
    <string name="connection_error">Connection Error</string>
    <string name="warning_X_not_selected">%1$s is not selected.</string>
    <string name="your_deliveries">Your Deliveries</string>
    <string name="past">Past</string>
    <string name="current">Current</string>
    <string name="offer_created">Offer Created</string>
    <string name="successfully_retrieved">Order Detail Successfully Retrieved</string>

</resources>
