<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_find_courier"
        android:title="@string/find_courier"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:id="@+id/action_your_orders"
        android:title="@string/your_orders"
        android:icon="@drawable/box"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:id="@+id/action_your_deliveries"
        android:title="@string/your_deliveries"
        android:icon="@drawable/courier"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:id="@+id/action_offer_to_carry"
        android:title="@string/offer_to_carry"
        android:icon="@drawable/plus"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
</menu>