<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_view_explanation_instant_booking_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/instant_booking_explanation"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/instant_booking_explanation_2"
        android:gravity="center"
        android:typeface="sans"
        android:layout_below="@id/text_view_explanation_instant_booking_fragment"
        android:layout_marginTop="20dp"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_launcher_round"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_post_without_instant_booking_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_alignBottom="@id/card_view_post_with_instant_booking_fragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorSplashBackground"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/continue_without_instant_booking"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_post_with_instant_booking_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/colorSplashBackground"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/continue_text"/>
    </android.support.v7.widget.CardView>
</RelativeLayout>