<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <LinearLayout
            android:id="@+id/layout_origin_find_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="-15dp">

            <TextView
                style="@style/TextViewSmallHeaderStyle"
                android:text="@string/origin"/>

            <EditText
                android:id="@+id/edit_text_origin_find_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/image_switch_find_fragment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_gravity="end"
            android:src="@drawable/up_down_array"
            android:tint="@color/colorSplashBackground" />

        <LinearLayout
            android:id="@+id/layout_destination_find_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="-15dp">

            <TextView
                style="@style/TextViewSmallHeaderStyle"
                android:text="@string/destination"/>

            <EditText
                android:id="@+id/edit_text_destination_find_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_date_find_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewSmallHeaderStyle"
                android:text="@string/date"/>

            <EditText
                android:id="@+id/edit_text_date_find_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_time_find_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewSmallHeaderStyle"
                android:text="@string/time"/>

            <EditText
                android:id="@+id/edit_text_time_find_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_capacity_find_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewSmallHeaderStyle"
                android:text="@string/capacity"
                android:layout_gravity="center_vertical"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/image_view_minus_find_fragment"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/minus"/>

            <TextView
                android:id="@+id/text_view_capacity_find_fragment"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorSplashBackground"
                android:text="3"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/image_view_plus_find_fragment"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/plus"/>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_search_find_fragment"
            style="@style/CardViewButtonTheme"
            android:layout_marginTop="30dp">

            <TextView
                style="@style/TextViewButtonTheme"
                android:text="@string/search"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>